--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="Scientific Calculator" />
-    <meta property="og:image" content="/scientific-calculator/images/logo.png" />
-    <meta property="og:type" content="Calculator">
     <title>Basic Scientific Calculator</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
-<body data-gr-c-s-loaded="true">
+<body>
+    
     <div class="container">
         <div class="row">
             <div class="col-lg-2"></div>
