--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    
+    <script src="scripts.js"></script>
     <div class="container">
         <div class="row">
             <div class="col-lg-2"></div>
